# openMVG_dummyApp

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: helloworld.cpp
